feat: automatically reloads the chat injector after saving the channel name.

--- a/popup.html
+++ b/popup.html
@@ -9,8 +9,8 @@
     </style>
 </head>
 <body>
-<label for="channelId">Kick Channel ID:</label>
-<input id="channelId" type="text" placeholder="Enter Kick chatroom ID" />
+<label for="channelName">Kick Channel Name:</label>
+<input id="channelName" type="text" placeholder="channel name" />
 <button id="saveBtn">Save</button>
 <div id="status"></div>
 
